--- a/src/pages/user/[id]/subsessions/index.astro
+++ b/src/pages/user/[id]/subsessions/index.astro
@@ -16,33 +16,20 @@ export function getStaticPaths() {
 const { id } = Astro.params;
 const seoTitle = `Subsessions - ${id}`;
 const seoDescription = `Subsessions page for user ID: ${id}`;
-const subsessionRaceResults = await db
+const subsessions = await db
   .select()
   .from(SubsessionRaceResults)
+  .innerJoin(
+    Subsession,
+    eq(SubsessionRaceResults.subsession_id, Subsession.subsession_id)
+  )
   .where(
     and(
       eq(SubsessionRaceResults.cust_id, Number(id)),
       sql`${SubsessionRaceResults.simsession_name} IN ${["RACE", "FEATURE", "N/A"]}`
     )
-  );
-const subsessionsWithoutResult = await db
-  .select()
-  .from(Subsession)
-  .where(
-    sql`${Subsession.subsession_id} IN ${subsessionRaceResults.map((subsession) => subsession.subsession_id)}`
   )
   .orderBy(desc(Subsession.subsession_id));
-const subsessions = subsessionsWithoutResult.map((subsessionWithoutResult) => {
-  const { subsession_id } = subsessionWithoutResult;
-  const userResult = subsessionRaceResults.find(
-    (subsessionRaceResult) =>
-      subsessionRaceResult.subsession_id === subsession_id
-  );
-  return {
-    ...subsessionWithoutResult,
-    userResult,
-  };
-});
 ---
 
 <SubsessionsLayout {id} {seoTitle} {seoDescription} {subsessions} />
