--- a/src/lib/components/session-results/tables.astro
+++ b/src/lib/components/session-results/tables.astro
@@ -1,9 +1,8 @@
 ---
-import PracticeResults from "$lib/components/session-results/practice.astro";
-import QualifyingResults from "$lib/components/session-results/qualifying.astro";
+import NonRaceResults from "$lib/components/session-results/non-race.astro";
 import RaceResults from "$lib/components/session-results/race.astro";
 import type { Session } from "$lib/types";
-const { sessions } = Astro.props;
+const { sessions, notMultiClass } = Astro.props;
 const practice: Session = sessions.find((session: Session) =>
   session.simsession_type_name.match(/PRACTICE/i)
 );
@@ -62,7 +61,7 @@ const race: Session =
       x-transition:enter.duration.500ms
       x-transition:leave.duration.0ms
     >
-      <PracticeResults session={practice} />
+      <NonRaceResults session={practice} {notMultiClass} />
     </div>
     <div
       x-cloak
@@ -70,7 +69,7 @@ const race: Session =
       x-transition:enter.duration.500ms
       x-transition:leave.duration.0ms
     >
-      <QualifyingResults session={qualifying} />
+      <NonRaceResults session={qualifying} {notMultiClass} />
     </div>
     <div
       x-cloak
@@ -78,7 +77,7 @@ const race: Session =
       x-transition:enter.duration.500ms
       x-transition:leave.duration.0ms
     >
-      <RaceResults session={heat} />
+      <RaceResults session={heat} {notMultiClass} />
     </div>
     <div
       x-cloak
@@ -86,7 +85,7 @@ const race: Session =
       x-transition:enter.duration.500ms
       x-transition:leave.duration.0ms
     >
-      <RaceResults session={race} />
+      <RaceResults session={race} {notMultiClass} />
     </div>
   </div>
 </div>
