Format session-results components

--- a/src/lib/components/session-results/non-race.astro
+++ b/src/lib/components/session-results/non-race.astro
@@ -8,9 +8,9 @@ interface Props {
 }
 const { session, notMultiClass } = Astro.props;
 if (notMultiClass) {
-  keysToDisplay.delete('finish_position_in_class');
-  keysToDisplay.delete('class_interval');
-  keysToDisplay.delete('car_class_short_name');
+  keysToDisplay.delete("finish_position_in_class");
+  keysToDisplay.delete("class_interval");
+  keysToDisplay.delete("car_class_short_name");
 }
 ---
 
