--- a/src/lib/components/session-results/race.astro
+++ b/src/lib/components/session-results/race.astro
@@ -3,10 +3,10 @@ import SessionResults from "$lib/components/subsession/session-results.astro";
 import keysToDisplay from "$lib/utils/race-session-keys-to-display";
 const { session, notMultiClass } = Astro.props;
 if (notMultiClass) {
-  keysToDisplay.delete('finish_position_in_class');
-  keysToDisplay.delete('class_interval');
-  keysToDisplay.delete('starting_position_in_class');
-  keysToDisplay.delete('car_class_short_name');
+  keysToDisplay.delete("finish_position_in_class");
+  keysToDisplay.delete("class_interval");
+  keysToDisplay.delete("starting_position_in_class");
+  keysToDisplay.delete("car_class_short_name");
 }
 ---
 
