--- a/src/pages/user/[id]/index.astro
+++ b/src/pages/user/[id]/index.astro
@@ -9,63 +9,4 @@ const title = `User  - ${id}`;
 const description = `User page for user ID: ${id}`;
 ---
 
-<DefaultLayout {title} {description}>
-  <div class="h-screen text-center text-3xl">
-    <div>
-      <a class="underline" href=`/Stat-N-Track/user/${id}/scheduling`
-        >Scheduling</a
-      >
-    </div>
-    <div>
-      <a class="underline" href=`/Stat-N-Track/user/${id}/scheduling/by-week`
-        >Scheduling By Week</a
-      >
-    </div>
-    <div>
-      <a class="underline" href=`/Stat-N-Track/user/${id}/subsessions`
-        >All Sessions</a
-      >
-    </div>
-    <div>
-      <a class="underline" href=`/Stat-N-Track/user/${id}/subsessions/by-year`
-        >Sessions By Year</a
-      >
-    </div>
-    <div>
-      <a
-        class="underline"
-        href=`/Stat-N-Track/user/${id}/subsessions/by-car-class`
-        >Sessions By Car Class</a
-      >
-    </div>
-    <div>
-      <a class="underline" href=`/Stat-N-Track/user/${id}/subsessions/by-track`
-        >Sessions By Track</a
-      >
-    </div>
-    <div>
-      <a class="underline" href=`/Stat-N-Track/user/${id}/standings`
-        >All Season Standings</a
-      >
-    </div>
-    <div>
-      <a
-        class="underline"
-        href=`/Stat-N-Track/user/${id}/standings/full-participation`
-        >Fully Participated Season Standings</a
-      >
-    </div>
-    <div>
-      <a class="underline" href=`/Stat-N-Track/user/${id}/standings/by-year`
-        >Season Standings By Year</a
-      >
-    </div>
-    <div>
-      <a
-        class="underline"
-        href=`/Stat-N-Track/user/${id}/standings/by-car-class`
-        >Season Standings By Car Class</a
-      >
-    </div>
-  </div>
-</DefaultLayout>
+<DefaultLayout {id} {title} {description} />
