--- a/src/pages/user/[id]/scheduling/by-week/[timestamp].astro
+++ b/src/pages/user/[id]/scheduling/by-week/[timestamp].astro
@@ -126,7 +126,7 @@ const title = `Scheduling By Week - ${id} and week starting ${new Date(Number(ti
 const description = title;
 ---
 
-<DefaultLayout {title} {description}>
+<DefaultLayout {id} {title} {description}>
   <div class="grid grid-cols-1 pt-6 overflow-x-scroll">
     <div class="text-center col-span-1 text-2xl pb-6">
       <p>Week Starts</p>
