--- a/src/pages/user/[id]/scheduling/index.astro
+++ b/src/pages/user/[id]/scheduling/index.astro
@@ -107,7 +107,7 @@ const title = `Scheduling - ${id}`;
 const description = `Scheduling page for user ID: ${id}`;
 ---
 
-<DefaultLayout {title} {description}>
+<DefaultLayout {id} {title} {description}>
   <div class="grid grid-cols-4 text-center pt-6">
     {
       Object.keys(results[0])
