--- a/src/pages/user/[id]/season/[seasonId]/car-class/[carClassId]/season-summary.astro
+++ b/src/pages/user/[id]/season/[seasonId]/car-class/[carClassId]/season-summary.astro
@@ -222,7 +222,7 @@ const overviewItems = [
 ];
 ---
 
-<DefaultLayout {title} {description}>
+<DefaultLayout {id} {title} {description}>
   <div class="text-center py-4 border-2">
     <p><b>{title}</b></p>
     <div class="text-center row-span-1">
