--- a/src/pages/user/[id]/subsessions/by-year/index.astro
+++ b/src/pages/user/[id]/subsessions/by-year/index.astro
@@ -23,7 +23,7 @@ import {
 ---
 
 
-<DefaultLayout {title} {description}>
+<DefaultLayout {id} {title} {description}>
 	<div class="text-center text-3xl">
     {years.map((year) => (<div><a class="underline" href=`/Stat-N-Track/user/${id}/subsessions/by-year/${year.season_year}` >{year.season_year}</a></div>))}
 	</div>
