--- a/src/lib/layouts/standings.astro
+++ b/src/lib/layouts/standings.astro
@@ -79,7 +79,7 @@ const generateLinkForKey = ({
 };
 ---
 
-<DefaultLayout title={seoTitle} description={seoDescription}>
+<DefaultLayout {id} title={seoTitle} description={seoDescription}>
   <div class="grid grid-cols-1 pt-6 overflow-x-scroll">
     <table x-ref="Table" x-data="table" class="text-center col-span-1">
       <tr x-ref="Headings"
