--- a/src/pages/user/[id]/scheduling/by-week/index.astro
+++ b/src/pages/user/[id]/scheduling/by-week/index.astro
@@ -14,7 +14,7 @@ const title = `Scheduling By Week - ${id}`;
 const description = `Scheduling by week page for user ID: ${id}`;
 ---
 
-<DefaultLayout {title} {description}>
+<DefaultLayout {id} {title} {description}>
   <div class="text-center text-3xl">
     {Object.keys(weeks).map((week) => (<div><a class="underline" href=`/Stat-N-Track/user/${id}/scheduling/by-week/${Number(new Date(week))}` >{new Date(week).toLocaleString("en-US", { timeZone: "America/Chicago" })}</a></div>))}
   </div>
