Correct Season Summary borders

--- a/src/pages/user/[id]/season/[seasonId]/car-class/[carClassId]/index.astro
+++ b/src/pages/user/[id]/season/[seasonId]/car-class/[carClassId]/index.astro
@@ -121,7 +121,7 @@ const description = title;
     class="underline"
     href=`/Stat-N-Track/user/${id}/season/${seasonId}/car-class/${carClassId}/season-summary`
   >
-    <div class="text-center py-4 border-2">
+    <div class="text-center py-4 border-x-2 border-b-2">
       <p><b>View Season Summary</b></p>
     </div>
   </a>
