--- a/src/pages/user/[id]/season/[seasonId]/car-class/[carClassId]/season-summary.astro
+++ b/src/pages/user/[id]/season/[seasonId]/car-class/[carClassId]/season-summary.astro
@@ -223,7 +223,7 @@ const overviewItems = [
 ---
 
 <DefaultLayout {id} {title} {description}>
-  <div class="text-center py-4 border-2">
+  <div class="text-center py-4 border-x-2 border-b-2">
     <p><b>{title}</b></p>
     <div class="text-center row-span-1">
       Overview
