Update favicon to use root domain level files

--- a/src/lib/layouts/default.astro
+++ b/src/lib/layouts/default.astro
@@ -53,7 +53,10 @@ const userNavigationLinks = id
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/Stat-N-Track/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://shinsina.github.io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://shinsina.github.io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://shinsina.github.io/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="https://shinsina.github.io/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content={seoDescription} />
