Include x-cloak style where applicable

--- a/src/pages/user/[id]/scheduling/index.astro
+++ b/src/pages/user/[id]/scheduling/index.astro
@@ -108,6 +108,11 @@ const description = `Scheduling page for user ID: ${id}`;
 ---
 
 <DefaultLayout {id} {title} {description}>
+  <style>
+    [x-cloak] {
+      display: none !important;
+    }
+  </style>
   <div class="grid grid-cols-4 text-center pt-6">
     {
       Object.keys(results[0])
