--- a/src/lib/components/session-results/tables.astro
+++ b/src/lib/components/session-results/tables.astro
@@ -20,6 +20,11 @@ const race: Session =
 ---
 
 <div x-data="tables">
+  <style>
+    [x-cloak] {
+      display: none !important;
+    }
+  </style>
   <div class=`grid grid-cols-${sessions.length} text-center pb-6`>
     <button
       id="PRACTICE QUALIFY HEAT RACE"
