--- a/src/pages/shared-subsessions.astro
+++ b/src/pages/shared-subsessions.astro
@@ -158,6 +158,11 @@ const description = "Shared subsessions for all Stat 'n' Track users";
 ---
 
 <DefaultLayout {title} {description}>
+  <style>
+    [x-cloak] {
+      display: none !important;
+    }
+  </style>
   <div class="flex flex-col">
     <div class="self-center text-center lg:text-2xl md:text-md sm:text-sm py-4">
       <div class="font-bold border-b-2 border-white">Head to Head Wins</div>
