Remove incorrectly used x-if

--- a/src/lib/components/session-results/tables.astro
+++ b/src/lib/components/session-results/tables.astro
@@ -59,7 +59,7 @@ const race: Session =
       Race Table
     </button>
   </div>
-  <div x-if="true">
+  <div>
     <div
       x-cloak
       x-show="PRACTICE"
