Increase padding around navigation elements

--- a/src/lib/layouts/default.astro
+++ b/src/lib/layouts/default.astro
@@ -74,7 +74,7 @@ const userNavigationLinks = id
       >
         {
           primaryNavigationLinks.map(({ href, label }) => (
-            <a class="underline pr-2" {href}>
+            <a class="underline p-2" {href}>
               {label}
             </a>
           ))
