--- a/src/pages/shared-subsessions.astro
+++ b/src/pages/shared-subsessions.astro
@@ -211,7 +211,7 @@ const description = "Shared subsessions for all Stat 'n' Track users";
           </div>
         ))
       }
-      <div class="grid grid-cols-1 pt-6">
+      <div class="grid grid-cols-1 pt-6 overflow-x-scroll">
         <table x-ref="Table" x-data="table" class="text-center col-span-1">
           <tr x-ref="Headings">
             {
